force-app/main/default/objects/Purchase_Order__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Implementation &amp; Testing</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>Hypercare</fullName>
            </value>
            <value>
                <fullName>MSA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>