force-app/main/default/objects/Purchase_Order__c/listViews/Incorrect_Status.listView-meta.xml
<ListView>
    <fullName>Incorrect_Status</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>Incorrect Status</label>
</ListView>